--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -3,7 +3,7 @@
     justify-content: space-between;
     align-items: center;
     background-color: #e5e1e1;
-    height: 50%;
+    height: 5vh;
 }
 
 a {
