--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,8 @@
 *,*:before,*:after{-moz-box-sizing: border-box;-webkit-box-sizing: border-box;box-sizing: border-box;}
 :focus,:active{outline: none;}
 a:focus,a:active{outline: none;}
-nav,footer,header,aside{display: block;}
-html,body{height:100%;width:100%;font-size:100%;line-height:1;font-size:14px;-ms-text-size-adjust:100%;-moz-text-size-adjust:100%;-webkit-text-size-adjust:100%;}
+/* nav,footer,header,aside{display: block;} */
+/* html,body{height:100%;width:100%;font-size:100%;line-height:1;font-size:14px;-ms-text-size-adjust:100%;-moz-text-size-adjust:100%;-webkit-text-size-adjust:100%;} */
 input,button,textarea{font-family:inherit;}
 input::-ms-clear{display: none;}
 button{cursor: pointer;}
@@ -15,7 +15,16 @@ ul li{list-style: none;}
 img{vertical-align: top;}
 /*--------------------*/
 
+html, body {
+    width: 100%;
+    height: 100%;
+}
+#root {
+    min-height: 100%;
+}
+
 .app {
+    min-height: 100vh;
     text-align: center;
     margin: 0, auto;
 }
